checkbox added in myappointment_page

--- a/app/src/main/res/drawable/curve_edge_dashbooard_display_count_bg.xml
+++ b/app/src/main/res/drawable/curve_edge_dashbooard_display_count_bg.xml
@@ -6,7 +6,7 @@
         android:topRightRadius="@dimen/dialog_radius" />
     <stroke
         android:width="0.5dp"
-        android:color="@color/color_dashboard_count_bg" />
+        android:color="@color/divider" />
     <padding
         android:bottom="0dp"
         android:left="0dp"
