--- a/app/src/main/res/layouts/patient_appointment/layout/my_appointments_child_item.xml
+++ b/app/src/main/res/layouts/patient_appointment/layout/my_appointments_child_item.xml
@@ -6,7 +6,9 @@
     android:background="@color/divider"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp7"
@@ -146,6 +148,7 @@
             </LinearLayout>
 
             <CheckBox
+                android:id="@+id/checkbox"
                 tools:visibility="visible"
                 android:visibility="gone"
                 android:layout_width="wrap_content"
