--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,6 +42,7 @@
     <color name="grey_300">#dcdcdc</color>
     <color name="divider">#e5e5e5</color>
     <color name="rating_color">#3676a3</color>
+    <color name="toolbar_divider_color">#d5d5d5</color>
     <color name="view_line">#f4f4f4</color>
     <color name="grey">#b3b3b3</color>
 </resources>
