--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -55,4 +55,7 @@
     <dimen name="sp10">10sp</dimen>
     <dimen name="dp28">28dp</dimen>
     <dimen name="dp32">32dp</dimen>
+    <dimen name="dp210">210dp</dimen>
+    <dimen name="dp65">65dp</dimen>
+    <dimen name="dp24">24dp</dimen>
 </resources>
