--- a/app/src/main/res/layouts/common/layout/common_action_bar.xml
+++ b/app/src/main/res/layouts/common/layout/common_action_bar.xml
@@ -16,9 +16,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp10"
-            android:paddingLeft="@dimen/dp14"
+            android:paddingStart="@dimen/dp14"
+            android:paddingEnd="@dimen/dp10"
             android:paddingTop="@dimen/dp6"
-            android:src="@drawable/back_arrow_a_01" />
+            android:src="@drawable/back_arrow_a_01"
+            android:paddingLeft="@dimen/dp14"
+            android:paddingRight="@dimen/dp10" />
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:id="@+id/titleTextView"
