--- a/app/src/main/res/layouts/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -119,6 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp7"
+        android:visibility="gone"
         android:background="@drawable/result_white_box"
         android:orientation="vertical">
 
