--- a/app/src/main/res/layouts/patient_appointment/layout/my_appointments_layout.xml
+++ b/app/src/main/res/layouts/patient_appointment/layout/my_appointments_layout.xml
@@ -15,6 +15,7 @@
         android:dividerHeight="0dp" />
 
     <FrameLayout
+        android:background="@color/divider"
         android:layout_width="match_parent"
         android:layout_above="@+id/recyclerViewBottom"
         android:layout_height="match_parent">
@@ -41,6 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="visible"
+                    android:layout_marginTop="@dimen/dp10"
                     app:hintText="@string/search_hint">
 
                 </com.rescribe.doctor.ui.customesViews.EditTextWithDeleteButton>
@@ -69,11 +71,15 @@
                 android:divider="@null"
                 android:groupIndicator="@null"
                 android:visibility="gone"
-
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-            <include layout="@layout/common_recycler_view" />
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@null"
+                android:visibility="gone"
+                tools:visibility="visible" />
         </LinearLayout>
 
         <include layout="@layout/common_no_records_found" />
