--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -59,4 +59,5 @@
     <dimen name="dp65">65dp</dimen>
     <dimen name="dp24">24dp</dimen>
     <dimen name="dp62">62dp</dimen>
+    <dimen name="sp20">20sp</dimen>
 </resources>
