solved bugs and added logout and chat ui

--- a/app/src/main/res/layouts/global_ui_for_connect/layout/global_connect_chats_row_item.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/global_connect_chats_row_item.xml
@@ -14,6 +14,8 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_marginBottom="@dimen/dp10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -26,12 +28,14 @@
             android:layout_marginEnd="@dimen/dp5"
             android:layout_marginLeft="@dimen/dp16"
             android:layout_marginRight="@dimen/dp5"
+            android:gravity="center"
             android:layout_marginStart="@dimen/dp16"
             android:padding="3dip">
 
             <ImageView
                 android:id="@+id/imageOfDoctor"
                 android:layout_width="@dimen/dp50"
+                android:layout_centerInParent="true"
                 android:layout_height="@dimen/dp50"
                 android:src="@drawable/layer_12" />
 
@@ -49,7 +53,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="217dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/dp10"
@@ -64,9 +68,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dip"
+                android:text="Sai Clinic"
                 android:textColor="@color/vitals_name"
                 android:textSize="@dimen/sp15"
-                app:customFont="@string/roboto_bold" />
+                app:customFont="@string/roboto_bold"
+                tools:visibility="visible" />
 
             <!-- Artist Name -->
             <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -75,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sp17"
-                app:customFont="@string/roboto_bold" />
+                app:customFont="@string/roboto_bold"
+                tools:text="dfgfdg" />
 
             <!-- Rightend Duration -->
             <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -83,43 +90,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
+                android:textColor="@color/tagColor"
                 android:textSize="@dimen/sp12"
-                app:customFont="@string/roboto_medium" />
+                app:customFont="@string/roboto_medium"
+                android:text="Last OPD - 03rd Nov'17" />
         </LinearLayout>
 
         <RelativeLayout
-            android:layout_width="@dimen/dp50"
-            android:layout_height="@dimen/dp56"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="@dimen/dp16"
-            android:layout_marginRight="@dimen/dp16">
-
-            <TextView
-                android:id="@+id/badgeView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="end"
-                android:background="@drawable/badge"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp12"
-                android:visibility="gone"
-                tools:text="1"
-                tools:visibility="visible" />
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
             <com.rescribe.doctor.ui.customesViews.CustomTextView
-                android:id="@+id/paidStatusTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:textColor="@color/green_light"
+                tools:text="yesterday"
+                android:visibility="visible"
+                android:id="@+id/showLastMsgTime"
+                android:textColor="@color/grey_shade"
                 android:textSize="@dimen/sp11"
-                app:customFont="@string/roboto_bold"
-                tools:text="Rs 200/-" />
+                android:layout_marginRight="@dimen/dp12"/>
         </RelativeLayout>
+
 
     </LinearLayout>
 
