--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -112,12 +112,14 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="@dimen/dp6"
+                    android:visibility="invisible"
                     android:text="@string/forgot_password"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp14"
                     android:textStyle="bold" />
 
                 <View
+                    android:visibility="invisible"
                     android:layout_width="@dimen/dp2"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/dp10"
@@ -131,6 +133,7 @@
                     android:gravity="center"
                     android:padding="@dimen/dp6"
                     android:text="@string/sign_up"
+                    android:visibility="invisible"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp14"
                     android:textStyle="bold" />
