--- a/app/src/main/res/layouts/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -120,6 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp7"
         android:visibility="gone"
+        tools:visibility="visible"
         android:background="@drawable/result_white_box"
         android:orientation="vertical">
 
