--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,9 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/notification"
-        android:icon="@drawable/notification_2"
+        android:id="@+id/action_search"
+        android:icon="@drawable/search"
         android:orderInCategory="100"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="@string/notification"
-        app:showAsAction="always" />
+        app:showAsAction="always|collapseActionView" />
 </menu>
